--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -36,6 +36,7 @@
 		<!-- media-queries -->
         <link rel="stylesheet" href="css/media-queries.css">
 
+        <link rel="stylesheet" href="css/ng-table.css">
 		<!-- Modernizer Script for old Browsers -->
         <script src="js/template/modernizr-2.6.2.min.js"></script>
 
@@ -157,17 +158,24 @@
 		<script src="js/lib/angular-ui-router/release/angular-ui-router.js"></script>
 		<script src="js/lib/ngstorage/ngStorage.min.js"> </script>
 		<script src="js/lib/ng-file-upload/ng-file-upload.js"></script>
+		<script src="js/lib/ng-table/ng-table.js"></script>
+		<script src="js/lib/bootstrap/ui-bootstrap-tpls-1.3.2.min.js"></script>
 
 		
 		<script src="js/app.js"></script>
 		<script src="js/constant.js"></script> 
+		
 		<script src="js/services/userService.js"></script>
 		<script src="js/services/cervejaService.js"></script> 
 		<script src="js/services/TokenInterceptor.js"></script>
+		<script src="js/services/ShareData.js"></script>
+		
 		<script src="js/controllers/homeController.js"></script> 
 		<script src="js/controllers/novoController.js"></script> 
 		<script src="js/controllers/cervejaController.js"></script> 
 		<script src="js/directives.js"></script> 
+		<script src="js/directive/styleDirective.js"></script> 
+		<script src="js/directive/cervejariaDirective.js"></script> 
 
 		<!-- Essential jQuery Plugins
 		================================================== -->
