--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -169,12 +169,17 @@
 		<script src="js/services/cervejaService.js"></script> 
 		<script src="js/services/TokenInterceptor.js"></script>
 		<script src="js/services/ShareData.js"></script>
+		<script src="js/services/tabela.js"></script>
+		<script src="js/services/statusService.js"></script>
 		
 		<script src="js/controllers/homeController.js"></script> 
 		<script src="js/controllers/novoController.js"></script> 
 		<script src="js/controllers/cervejaController.js"></script> 
+		<script src="js/controllers/cervejariaController.js"></script> 
+		<script src="js/controllers/styleController.js"></script> 
 		<script src="js/directives.js"></script> 
 		<script src="js/directive/styleDirective.js"></script> 
+		<script src="js/directive/categoriaDirective.js"></script> 
 		<script src="js/directive/cervejariaDirective.js"></script> 
 
 		<!-- Essential jQuery Plugins
